<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.simtechdata</groupId>
    <artifactId>MacIcns</artifactId>
    <version>1.4.0</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.release>20</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>com.simtechdata.Main</mainClass>
        <javafx.version>21-ea+24</javafx.version>
        <javapackager>1.7.2</javapackager>
        <maven-jar-plugin>3.3.0</maven-jar-plugin>
        <maven-compiler-plugin>3.11.0</maven-compiler-plugin>
        <versions-maven-plugin>2.15.0</versions-maven-plugin>
        <native-maven-plugin>0.9.28</native-maven-plugin>
        <versions-maven-plugin>2.16.2</versions-maven-plugin>
        <maven-surefire-plugin>3.2.2</maven-surefire-plugin>
        <javafx-maven-plugin>0.0.8</javafx-maven-plugin>
        <gluonfx-maven-plugin>1.0.21</gluonfx-maven-plugin>
        <maven-compiler-plugin>3.11.0</maven-compiler-plugin>
        <maven-assembly-plugin>3.3.0</maven-assembly-plugin>
        <system-linker-arg/>
        <system-native-image-arg/>
        <compatibility-arg/>
        <package.type/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>
        <dependency>
            <groupId>org.glavo</groupId>
            <artifactId>simple-png-javafx</artifactId>
            <version>0.2.0</version>
        </dependency>
        <dependency>
            <groupId>com.simtechdata</groupId>
            <artifactId>JavaProc</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Maven Versions -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>display-dependency-updates</goal>
                            <goal>display-plugin-updates</goal>
                            <goal>property-updates-report</goal>
                            <goal>dependency-updates-report</goal>
                            <goal>plugin-updates-report</goal>
                            <goal>update-properties</goal>
                            <goal>use-latest-versions</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Maven compiler plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin}</version>
            </plugin>
            <!-- Maven Surefire plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin}</version>
                <configuration>
                    <classpathDependencyExcludes>org.graalvm.nativeimage</classpathDependencyExcludes>
                    <argLine>-ea</argLine>
                </configuration>
            </plugin>
            <!-- JavaFX Maven Plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven-plugin}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <launcher>MacIcns</launcher>
                </configuration>
            </plugin>
            <!-- GluonFX GUI native image builder plugin -->
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx-maven-plugin}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <linkerArgs>
                        <arg>${system-linker-arg}</arg>
                    </linkerArgs>
                    <nativeImageArgs>
                        <arg>--enable-url-protocols=https</arg>
                        <arg>--enable-url-protocols=http</arg>
                        <arg>--no-fallback</arg>
                        <arg>--verbose</arg>
                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                        <arg>${system-native-image-arg}</arg>
                        <arg>${compatibility-arg}</arg>
                        <arg>-H:ReflectionConfigurationFiles=${project.basedir}/config/reflect-config.json</arg>
                    </nativeImageArgs>
                    <appIdentifier>${mainClass}</appIdentifier>
                    <releaseConfiguration>
                        <vendor>Syphon</vendor>
                        <description>MacIcns is a program that will take a single 1024x1024 png file and create a
                            correctly formatted icns file
                        </description>
                        <packageType>${package.type}</packageType>
                        <bundleShortVersion>${project.version}</bundleShortVersion>
                        <bundleVersion>${project.version}</bundleVersion>
                        <!-- for macOS/iOS -->
                        <skipSigning>true</skipSigning>
                    </releaseConfiguration>
                </configuration>
            </plugin>
            <!-- Maven Jar plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- [=macOS] GUI native image builder profile -->
        <profile>
            <id>build-for-macos-latest</id>
            <properties>
                <package.type>pkg</package.type>
                <system-native-image-arg>-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64
                </system-native-image-arg>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-macos-latest.o</system-linker-arg>
                <mac.app.store>true</mac.app.store>
            </properties>
        </profile>
    </profiles>
</project>
